--- a/slidify-pres/index.Rmd
+++ b/slidify-pres/index.Rmd
@@ -26,6 +26,21 @@ knit        : slidify::knit2slides
 3. functionality to see a general plot of prices
 4. functionality to see the variables against the price
 
+--- .class #id 
+
+## Dataset
+
+```{r,echo=FALSE}
+library(MASS)
+```
+
+```{r}
+
+str(Cars93)
+```
+
+--- .class #id 
+
 ## Results
 
 1. [source code](https://github.com/andhdo/coursera_dsc_09_dataprods_project.git)
